--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "zustand": "^4.5.2"
   },
   "scripts": {
+    "prepare": "husky",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll --detectOpenHandles",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "husky": "^9.0.11",
     "tailwindcss": "^3.4.1"
   },
   "jest": {
