--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prepare": "husky",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --watchAll --detectOpenHandles",
+    "test": "react-scripts test --watchAll=false --detectOpenHandles",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
